# StocksDash

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  data.py  docker-compose.yml  eval.py  howto.html  howto.md  input.txt  main.py  output.txt  plotting.py  process_text_blocks.py  pyproject.toml  requirements.txt  start.sh  stock_scores.csv  stocks.py  tickers.json  update_all_pip.py  user_preferences.json  utils.py
tests/: check_zero_volume.py  run_test_nvo.py  run_test_tsla.py
