[project]
name = "stocks"
version = "0.1.0"

readme = "README.md"
requires-python = ">=3.12"
description = "Migreret Python-projekt med uv"
authors = [
    { name = "Michael G. Nielsen", email = "mgn@mgnielsen.dk" }
]
dependencies = [
    "beautifulsoup4==4.14.2",
    "blinker==1.9.0",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.0",
    "curl_cffi==0.13.0",
    "dash==3.2.0",
    "Flask==3.1.2",
    "frozendict==2.4.7",
    "idna==3.11",
    "importlib_metadata==8.7.0",
    "itsdangerous==2.2.0",
    "Jinja2==3.1.6",
    "MarkupSafe==3.0.3",
    "multitasking==0.0.12",
    "narwhals==2.11.0",
    "nest-asyncio==1.6.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pandas-ta>=0.4.71b0",
    "peewee==3.18.3",
    "platformdirs==4.5.0",
    "plotly==6.4.0",
    "protobuf==6.33.0",
    "pycparser==2.23",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "requests==2.32.5",
    "retrying==1.4.2",
    "setuptools==80.9.0",
    "six==1.17.0",
    "soupsieve==2.8",
    "typing_extensions==4.15.0",
    "tzdata==2025.2",
    "urllib3==2.5.0",
    "websockets==15.0.1",
    "Werkzeug==3.1.3",
    "yfinance==0.2.66",
    "zipp==3.23.0",
]
